--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.divTodo{
+  
+  margin: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.divcontador{
+  margin-top: 5px;
 }
+.contadorX{
+  background-color: #E63946;
+  width: 2rem;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding-left: 4.5rem;
+  padding-right: 4.5rem;
+
+}
+.contadorO{
+  background-color: #A8DADC;
+  margin-left: 10px;
+  padding-left: 4.5rem;
+  padding-right: 4.5rem;
+
+}
+.roomsDiv{
+  display:flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+
+}
+.roomButton{
+  width: 300px;
 }
