--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ button{
   font-size: 1rem;
   border-radius: 2px;
   cursor: pointer;
+  transition: .5s;
+}
+button:hover{
+  background-color: #A8DADC;
+  color:#1D3557;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
